Implement geoIP and whois lookups directly from fail2ban-UI

--- a/pkg/web/static/fail2ban-ui.css
+++ b/pkg/web/static/fail2ban-ui.css
@@ -180,9 +180,9 @@ mark {
     transition: background-color 0.2s ease;
 }
 
-#backendStatus:hover {
+/*#backendStatus:hover {
     background-color: rgba(255, 255, 255, 0.15);
-}
+}*/
 
 #statusDot {
     width: 0.5rem;
