Added basic OPNsense integration, and fixed PfSense API by changing from X-API-Key and X-API-Secret headers to only x-api-key header (lowercase as specified in v2 API docs)

--- a/pkg/web/static/fail2ban-ui.css
+++ b/pkg/web/static/fail2ban-ui.css
@@ -314,7 +314,7 @@ mark {
     }
 }
 
-#advancedMikrotikFields, #advancedPfSenseFields {
+#advancedMikrotikFields, #advancedPfSenseFields, #advancedOPNsenseFields {
     padding: 10px;
 }
 
